<resources>
    <string name="app_name">DM</string>
    <string name="nt1">1</string>
    <string name="nt2">2</string>
    <string name="nt3">3</string>
    <string name="nt4">4</string>
    <string name="nt5">5</string>
    <string name="nt6">6</string>
    <string name="nt7">7</string>
    <string name="nt8">8</string>
    <string name="nt9">9</string>
    <string name="nt10">10</string>
    <string name="nt11">11</string>
    <string name="nt12">12</string>
    <string name="nt13">13</string>
    <string name="nt14">14</string>
    <string name="nt15">15</string>
    <string name="nt16">16</string>
    <string name="t1">table 1</string>
    <string name="t2">table 2</string>
    <string name="t3">table 3</string>
    <string name="t4">table 4</string>
    <string name="t5">table 5</string>
    <string name="t6">table 6</string>
    <string name="t7">table 7</string>
    <string name="t8">table 8</string>
    <string name="t9">table 9</string>
    <string name="t10">table 10</string>
    <string name="t11">table 11</string>
    <string name="t12">table 12</string>
    <string name="t13">table 13</string>
    <string name="t14">table 14</string>
    <string name="t15">table 15</string>
    <string name="t16">table 16</string>
    <string name="numerotable">Entrer le numéro de la table</string>
    <string name="selectionTable">Sélectionner une table</string>
    <string name="choix">ou</string>
    <string name="valideNum">Sélectionner cette table</string>
    <string name="entrerConvive">Entrer le nombre de convives</string>
    <string name="valideConvive">Confirmer le nombre de convives</string>
    <string name="valideCommande">valider la commande</string>
    <string name="boisson">Boisson</string>
    <string name="accompagnement">Accompagnement</string>
    <string name="plat">Plat</string>
    <string name="bleu">Bleu</string>
    <string name="medium">Medium</string>
    <string name="Saignant">Saignant</string>
    <string name="BienCuit">Bien cuit</string>
    <string name="aPoint">À point</string>
    <string name="boissonPartage">Boisson Partagé</string>
    <string name="accompagnementPartage">Accompagnement Partagé</string>
    <string name="platPartage">Plat Partagé</string>
    <string name="nombre">Quantité</string>
    <string name="container">Quantité</string>
    <string name="ajouterBoisson">Ajouter une boisson</string>
    <string name="ajouterAccompagnement">Ajouter un accompagnement</string>
    <string name="ajouterPlat">Ajouter un plat</string>

    <string name="idetifiant">Votre identifiant</string>
    <string name="motdepasse">Votre mot de passe</string>
    <string name="connexion">Se connecter</string>
    <string name="titre">Gestion salle de restaurant</string>

    <string name="forcerMAJ">Forcer la mise à jour</string>
    <string name="selectionModule">Selectionnez un module pour y accéder</string>
    <string name="ic_admin_desc">image d\'un super utilisateur</string>
    <string name="ic_cuisine_desc">image d\'une toque de chef</string>
    <string name="ic_caisse_desc">image d\'une carte avec utilisateur</string>
    <string name="ic_commandes_desc">image d\'une table</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="admin">Module Admin</string>
    <string name="cuisine">Module Cuisine</string>
    <string name="caisse">Module Caisse</string>
    <string name="commande">Module Commandes</string>
    <string name="ic_edit_desc">cerle orange d\'arrière plan</string>
    <string name="ic_delete_desc">cerle bleu fonce d\'arrière plan</string>
    <string name="sauvegarderIDCo">Se souvenir de moi</string>
    <string name="salle_image">Image d\'une table</string>

    <string-array name="user_roles">
        <item>Superviseur</item>
        <item>Responsable</item>
        <item>Serveur</item>
        <item>Cuisinier</item>
    </string-array>
</resources>