<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <AutoCompleteTextView
                android:id="@+id/platPartageEditText"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:hint="@string/platPartage" />

            <EditText
                android:id="@+id/platPartageQuantiteEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <AutoCompleteTextView
                android:id="@+id/accompagnementPartageEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/accompagnementPartage" />

            <EditText
                android:id="@+id/accompagmentPartageQuantiteEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <AutoCompleteTextView
                android:id="@+id/boissonPartageEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/boissonPartage" />

            <EditText
                android:id="@+id/boissonPartageQuantiteEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />
        </TableRow>

    </TableLayout>

</LinearLayout>
