<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_bleuVert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Titre">

        <TextView
            android:id="@+id/Title"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:padding="5dp"
            android:layout_gravity="center"
            android:textSize="29sp"
            android:textColor="@color/color_blancCasse"
            android:layout_marginTop="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Titre"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_border"
        android:orientation="vertical">


        <EditText

            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/idetifiant"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/account"
            android:drawableTint="@color/color_orange"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/motdepasse"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/lock"
            android:drawableTint="@color/color_orange"/>

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sauvegarderIDCo"
            android:layout_marginTop="8dp" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="@string/connexion"
            android:textAllCaps="true"
            android:textColor="@color/color_blancCasse"
            android:textSize="18sp"
            app:backgroundTint="@color/color_bleuFonce"
            app:icon="@drawable/login"
            app:iconTint="@color/color_orange" />

    </LinearLayout>

</RelativeLayout>
