<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/nbConvives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrerConvive"
        android:inputType="number"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/bouton_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirmConvivesButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valideConvive" />
    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayoutid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/color_bleuFonce"
        app:tabSelectedTextColor="@color/color_bleuVert"
        app:tabIndicatorColor="@color/color_vert"
        app:tabMode="scrollable" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagerid"
        android:layout_width="match_parent"
        android:layout_height="476dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/validerCommande"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valideCommande" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/validerCommande"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"/>

    </RelativeLayout>
</LinearLayout>
